@@ -1,3 +1,6 @@
+2006-08-08  Kazuhiko  <kazuhiko@fdiary.net>
+	* hiki/command.rb (cmd_view): set correct references (closes #68).
+
 2006-08-07  Kazuhiko  <kazuhiko@fdiary.net>
 	* misc/plugin/bbs.rb: revise HTML.
 
